# URLCut

./: .env  README.md  db.sqlite3  docker-compose.yml  exec.sh  logs.sh  manage.py  requirements.txt
api/: admin.py  models.py  permission.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200921_2032.py
api/templates/: base.html  follow.html  group.html  index.html  new_post.html  post.html  profile.html
api/templates/flatpages/: default.html
api/templates/includes/: author_contact.html  comments.html  menu.html  paginator.html  post_item.html
api/templates/misc/: 404.html  500.html
backend/: backend.dockerfile  gunicorn_conf.py  manage.py  prestart.sh  pyproject.toml  start.sh
backend/api/: admin.py  permission.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_auto_20200921_2032.py
backend/url_api/: a.py  asgi.py  settings.py  urls.py  wsgi.py
backend/users/: forms.py  views.py
backend/users/templates/: base.html  nav.html  signup.html
backend/users/templates/registration/: login.html
url_api/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  views.py
users/templates/: base.html  footer.html
users/templatetags/: user_filters.py
