[tool.poetry]
name = "dodms"
version = "0.1.0"
description = ""
authors = ["Lastway"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
django = "^3"
django-cors-headers = "^3"
djangorestframework = "^3.11"
djangorestframework-simplejwt = "^4"
requests = "^2.24.0"


[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
isort = "^5.2"
autoflake = "^1.3.1"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.10"
pytest-django = "^3.10"
asynctest = "^0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

